--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
     <script src="static/js/index.js"></script>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel='shortcut icon' href='static/img/favicon.png' type='image/x-icon/' >
-    <title>DexterHive</title>
+    <title>DexterHive - INNOVATE COLLABORATE FASTER TOGETHER</title>
   </head>
   <body>
     <div ng-app="DexterHiveApp">
