--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -30,7 +30,7 @@
     <script src="/static/js/index.js"></script>
     <link rel='shortcut icon' href='/static/img/favicon.png' type='image/x-icon/'>
 
-    <title>DexterHive - INNOVATE COLLABORATE FASTER TOGETHER</title>
+    <title>DexterHive</title>
 </head>
 
 <body class="outermost-container">
